syntax = "proto3";

package rerost.giro.v1;

option go_package = "github.com/rerost/giro/pb/hosts;hosts_pb";

import "google/protobuf/descriptor.proto";

message HostOptions {
	string host = 10;
}

extend google.protobuf.ServiceOptions {
	HostOptions host_option = 50000;
}

message GetHostRequest {
  string service_name = 1;
}

message GetHostResponse {
  string host = 1;
}

service HostService {
  rpc GetHost(GetHostRequest) returns (GetHostResponse) {}
}
